# epistemic-forge

./: .coverage  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  patch_run.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  tests.yml
docs/: ACADEMIC_FRAMEWORK.md  ARSENAL_RUN_LOG.md  REVIEW_REMEDIATION.md
docs/benchmark/: BENCHMARK.md  benchmark_results.json
epistemic_forge/: __init__.py  cli.py  errors.py  llm.py  models.py
epistemic_forge/benchmark/: __init__.py  baseline.py  llm_judge.py  metrics.py  suite.py
epistemic_forge/data/samples/: demo_specs.json
epistemic_forge/experts/: __init__.py  base.py  claim_expert.py  dialectic_expert.py  freelance_expert.py  kaggle_expert.py  semitic_expert.py  writing_expert.py
epistemic_forge/io/: export.py
epistemic_forge/memory/: economy.py  reflexion_store.py  skill_library.py
epistemic_forge/pipeline/: __init__.py  arsenal_run.py  l1_5_adas.py  l1_optimizer.py  l2_conductor.py  l3_search.py  l4_refine.py  l6_stages.py  machine.py  router.py
epistemic_forge/tools/: search.py
epistemic_forge/ui/: api.py  app.py
examples/: run_demo.py
examples/worked/: BEFORE_AFTER_philosophy.md  README.md
examples/worked/01_philosophy_predictive_responsibility/: MANIFEST.json  README.md  executive_summary.md  instruction.md  research_memo.md  result.json
examples/worked/02_kaggle_imbalanced_baseline/: MANIFEST.json  README.md  baseline_plan.py  executive_summary.md  instruction.md  kaggle_spine.md  research_memo.md  result.json
examples/worked/03_freelance_climate_sprint/: MANIFEST.json  README.md  client_brief.json  executive_summary.md  instruction.md  research_memo.md  result.json
scripts/: generate_worked_examples.py  run_benchmark.py
tests/: conftest.py  test_benchmark.py  test_extra.py  test_integration.py  test_llm.py  test_memory.py  test_models.py  test_pipeline.py  test_units.py
