[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-forge"
version = "1.0.0-rc1"
description = "ARSENAL-powered epistemic research kit: claims, dialectics, freelancing briefs, and Kaggle notebooks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fares Rafat" }]
keywords = [
  "research",
  "philosophy",
  "writing",
  "prompt-engineering",
  "kaggle",
  "freelance",
  "llm-agents",
  "arsenal",
  "toulmin",
  "argumentation",
  "claim-lattice",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = ["litellm>=1.40.0", "duckduckgo-search>=5.0.0", "pydantic>=2.0.0", "loguru>=0.7.0", "tenacity>=8.0.0", "instructor>=1.3.0", "rich>=13.0.0", "streamlit>=1.35.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
epistemic-forge = "epistemic_forge.cli:main"

[project.urls]
Homepage = "https://github.com/faresrafat3/epistemic-forge"
Repository = "https://github.com/faresrafat3/epistemic-forge"
Issues = "https://github.com/faresrafat3/epistemic-forge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["epistemic_forge*"]

[tool.setuptools.package-data]
epistemic_forge = ["data/samples/*.json", "data/samples/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
