[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-forge"
version = "1.0.0-rc1"
description = "ARSENAL-powered epistemic research kit: claims, dialectics, freelancing briefs, and Kaggle notebooks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fares Rafat" }]
keywords = [
  "research",
  "philosophy",
  "writing",
  "prompt-engineering",
  "kaggle",
  "freelance",
  "llm-agents",
  "arsenal",
  "toulmin",
  "argumentation",
  "claim-lattice",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = ["litellm>=1.40.0", "duckduckgo-search>=5.0.0", "chromadb>=0.4.0", "nbformat>=5.0.0", "pydantic>=2.0.0", "loguru>=0.7.0", "tenacity>=8.0.0", "instructor>=1.3.0", "rich>=13.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "bandit>=1.7",
    "types-requests",
]
ui = ["streamlit>=1.35.0"]

[project.scripts]
epistemic-forge = "epistemic_forge.cli:main"

[project.urls]
Homepage = "https://github.com/faresrafat3/epistemic-forge"
Repository = "https://github.com/faresrafat3/epistemic-forge"
Issues = "https://github.com/faresrafat3/epistemic-forge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["epistemic_forge*"]

[tool.setuptools.package-data]
epistemic_forge = ["data/samples/*.json", "data/samples/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["epistemic_forge"]
omit = ["epistemic_forge/ui/*", "epistemic_forge/benchmark/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008", "C401", "SIM105"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
